gap fixed

--- a/src/components/Carousel/slider.scss
+++ b/src/components/Carousel/slider.scss
@@ -55,7 +55,7 @@
 @media (max-width: 600px) {
   :root {
     --marquee-width: 100vw;
-    --marquee-height: 19vh;
+    --marquee-height: 16vh;
     --marquee-elements-displayed: 3;
   }
   .marquee:before,
